--- a/frontend_member/src/App.css
+++ b/frontend_member/src/App.css
@@ -5,3 +5,9 @@ body {
   background-color: #064983;
   font-family: 'Inter', sans-serif;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+
+body {
+  font-family: 'Inter', sans-serif;
+}
